--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 		</script>
   
 		<video poster="./assets/img/video.jpg" class="js-player w3-hide-small"><source src="https://files.catbox.moe/3pjc3i.mp4"/></video>
-		<video poster="./assets/img/video.jpg" class="js-player w3-hide-large w3-hide-medium"><source src="https://files.catbox.moe/vomrku.mp4"/></video>
+		<video poster="./assets/img/video.jpg" class="js-player w3-hide-large w3-hide-medium"><source src="https://files.catbox.moe/z4xjz1.mp4"/></video>
 		  
 		  <br>
 		  <img src="assets/img/path1.png" class="path">
