--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </button>
             <span data-notify="icon" class="tim-icons icon-bell-55"></span>
             <span>
-              <b> ¡INFORMACIÓN! - </b> Elizabeth Player v2 funcionando correctamente <a href="https://discord.gg/S96aG7YVbS" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
+              <b> ¡INFORMACIÓN! - </b> Elizabeth Player v2.3 funcionando correctamente <a href="https://discord.gg/S96aG7YVbS" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
             </div>
 			<!--
 			<div class="alert alert-danger alert-with-icon">
@@ -204,7 +204,7 @@
 			</center>
 	
 		  <center>
-		  <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><b><i class="tim-icons icon-cloud-download-93"></i> DESCARGAR CR V2</b></button>
+		  <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><b><i class="tim-icons icon-cloud-download-93"></i> DESCARGAR CR V2.3</b></button>
 		  <a href="https://paypal.me/anigo19" target="_blank"><button class="btn btn-primary"><b><i class="tim-icons icon-heart-2"></i> APOYAR EL PROYECTO</b></button></a>
 		  <a href="https://mega.nz/aff=BtrMSx0GUTk" target="_blank"><button class="btn btn-danger"><b><i class="fa fa-cloud"></i> CREAR CUENTA MEGA</b></button></a>
 		  </center>
@@ -225,7 +225,7 @@
 				  <h4 style="color:black">El archivo a descargar debe tener el nombre de <b>play-main.zip</b> caso contrario si se descarga otro archivo que no contenga ese nombre <b>ELIMINAR.</b></h4>
 				</div>
 				<div class="modal-footer">
-				  <a href="https://ouo.io/UR162" target="_blank"><button type="button" class="btn btn-default">DESCARGAR</button></a>
+				  <a href="#" target="_blank"><button type="button" class="btn btn-default">DESCARGAR</button></a>
 				  <button type="button" class="btn btn-danger" data-dismiss="modal">CERRAR</button>
 				</div>
 			  </div>
