--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 				  <h4 style="color:black">El archivo a descargar debe tener el nombre de <b>play-main.zip</b> caso contrario si se descarga otro archivo que no contenga ese nombre <b>ELIMINAR.</b></h4>
 				</div>
 				<div class="modal-footer">
-				  <a href="#" target="_blank"><button type="button" class="btn btn-default">DESCARGAR</button></a>
+				  <a href="https://ouo.io/UR162" target="_blank"><button type="button" class="btn btn-default">DESCARGAR</button></a>
 				  <button type="button" class="btn btn-danger" data-dismiss="modal">CERRAR</button>
 				</div>
 			  </div>
