--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -20,7 +20,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <title>
-    •CR• Premium By Elizabeth 2021
+    •CR• Premium By Elizabeth 2023
   </title>
   <!--     Fuentes e iconos     -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
@@ -48,8 +48,8 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="100">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="https://paypal.me/anigo19" rel="tooltip" title="Creado y elaborado por Elizabeth V" data-placement="bottom" target="_blank">
-          <span>CR</span> Elizabeth V.
+        <a class="navbar-brand" href="https://paypal.me/anigo19" rel="tooltip" title="Creado y elaborado por Elizabeth y E404" data-placement="bottom" target="_blank">
+          <span>CR</span> Elizabeth y E404.
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
@@ -134,7 +134,7 @@
             </button>
             <span data-notify="icon" class="tim-icons icon-bell-55"></span>
             <span>
-              <b> ¡INFORMACIÓN! - </b> Elizabeth Player v2.3 funcionando correctamente <a href="https://discord.gg/S96aG7YVbS" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
+              <b> ¡INFORMACIÓN! - </b> Elizabeth Player v3 funcionando correctamente <a href="https://discord.gg/S96aG7YVbS" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
             </div>
 			<!--
 			<div class="alert alert-danger alert-with-icon">
@@ -146,7 +146,7 @@
               <b> ¡INFORMACIÓN! - </b> Elizabeth Player v2 en mantenimiento <a href="https://discord.gg/S96aG7YVbS" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
             </div>
 		    -->
-		  <h1 class="title">CrunchyRoll Premium V2</h1><br>
+		  <h1 class="title">CrunchyRoll Premium V3</h1><br>
 		  <h3><i class="fa fa-bullhorn" style="font-size:25px;color:white"></i> Sigue todos los pasos correctamente para no tener problemas al momento de ver animes.</h3>
 		  
 		  <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
@@ -204,7 +204,7 @@
 			</center>
 	
 		  <center>
-		  <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><b><i class="tim-icons icon-cloud-download-93"></i> DESCARGAR CR V2.3</b></button>
+		  <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><b><i class="tim-icons icon-cloud-download-93"></i> DESCARGAR CR V3</b></button>
 		  <a href="https://paypal.me/anigo19" target="_blank"><button class="btn btn-primary"><b><i class="tim-icons icon-heart-2"></i> APOYAR EL PROYECTO</b></button></a>
 		  <a href="https://mega.nz/aff=BtrMSx0GUTk" target="_blank"><button class="btn btn-danger"><b><i class="fa fa-cloud"></i> CREAR CUENTA MEGA</b></button></a>
 		  </center>
