--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </div>
         <ul class="navbar-nav">
           <li class="nav-item p-0">
-            <a class="nav-link" rel="tooltip" title="Unete a mi servidor" data-placement="bottom" href="https://discord.gg/S96aG7YVbS" target="_blank">
-              <i class="fab fa-discord"></i>
-              <p class="d-lg-none d-xl-none">Discord</p>
+            <a class="nav-link" rel="tooltip" title="Unete a mi servidor" data-placement="bottom" href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank">
+              <i class="fab fa-telegram"></i>
+              <p class="d-lg-none d-xl-none">Telegram</p>
             </a>
           </li>
           <li class="nav-item p-0">
@@ -198,7 +198,7 @@
 			<div class="card-body">
 			<h4 class="card-title" style="color:white">Elizabeth</font></h4>
 			<p class="card-text">Cuando no creas cosas, te vuelves definido por tus gustos más que por tu habilidad</p>
-			<a href="https://discord.gg/S96aG7YVbS" target="_blank" class="btn btn-success stretched-link"><i class="fab fa-discord"></i> Discord</a>
+			<a href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank" class="btn btn-success stretched-link"><i class="fab fa-telegram-plane"></i> Discord</a>
 	        </div>
 			</div>
 			</center>
