--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 * CR PREMIUM WEB POR ELIZABETH
 =========================================================
 
-* DISCORD: https://discord.gg/S96aG7YVbS
+* CANAL: https://t.me/+7398nTxUhQU2MDVh
 * Copyright 2021 by Elizabeth (https://paypal.me/anigo19)
 
 * Coded by Creative Elizabeth
@@ -74,8 +74,8 @@
         </div>
         <ul class="navbar-nav">
           <li class="nav-item p-0">
-            <a class="nav-link" rel="tooltip" title="Unete a mi servidor" data-placement="bottom" href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank">
-              <i class="fab fa-telegram"></i>
+            <a class="nav-link" rel="tooltip" title="Unete a mi canal" data-placement="bottom" href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank">
+              <i class="fab fa-telegram-plane"></i>
               <p class="d-lg-none d-xl-none">Telegram</p>
             </a>
           </li>
@@ -198,7 +198,7 @@
 			<div class="card-body">
 			<h4 class="card-title" style="color:white">Elizabeth</font></h4>
 			<p class="card-text">Cuando no creas cosas, te vuelves definido por tus gustos más que por tu habilidad</p>
-			<a href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank" class="btn btn-success stretched-link"><i class="fab fa-telegram-plane"></i> Discord</a>
+			<a href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank" class="btn btn-success stretched-link"><i class="fab fa-telegram-plane"></i> Telegram</a>
 	        </div>
 			</div>
 			</center>
