--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </button>
             <span data-notify="icon" class="tim-icons icon-bell-55"></span>
             <span>
-              <b> ¡INFORMACIÓN! - </b> Elizabeth Player v3 funcionando correctamente <a href="https://discord.gg/S96aG7YVbS" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
+              <b> ¡INFORMACIÓN! - </b> Elizabeth Player v3 funcionando correctamente <a href="https://t.me/+7398nTxUhQU2MDVh" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
             </div>
 			<!--
 			<div class="alert alert-danger alert-with-icon">
@@ -143,7 +143,7 @@
             </button>
             <span data-notify="icon" class="tim-icons icon-bulb-63"></span>
             <span>
-              <b> ¡INFORMACIÓN! - </b> Elizabeth Player v2 en mantenimiento <a href="https://discord.gg/S96aG7YVbS" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
+              <b> ¡INFORMACIÓN! - </b> Elizabeth Player v2 en mantenimiento <a href="https://t.me/+7398nTxUhQU2MDVh" target="_blank" class="alert-link">¿Necesitas ayuda?</a></span>
             </div>
 		    -->
 		  <h1 class="title">CrunchyRoll Premium V3</h1><br>
