--- a/index.html
+++ b/index.html
@@ -180,11 +180,17 @@
 		  
 		  <br>
 		  <img src="assets/img/path1.png" class="path">
-		  <h1 class="title">BUGS</h1><br>
-		  <h3 class="text-danger"><b>* Subtitulos no encontrados</b></h3>
-		  <h4>Este bug se presenta cuando se observa algun anime con doblaje y este no cuenta con algun subtitulo integrado en el mismo.</h4><br>
-		  <h3 class="text-danger"><b>* Error al reproducir un video "Video no encontrado"<b></h3>
-		  <h4>Puedes solucionar este bug descargando una VPN y poner su ubicacion en cualquier Pais de LATAM menos Mexico.</h4>
+		  <h1 class="title">NUEVOS CAMBIOS</h1><br>
+		  <h3 class="text-danger"><b>* Funciona en modo BETA de Crunchyroll</b></h3>
+		  <h4>Se recomiendo usarlo en una cuenta secundaria para evitar baneo.</h4><br>
+		  <h3 class="text-danger"><b>* Puedes cambiar los SUBTITULOS al idioma que prefieras<b></h3>
+		  <h4>Puedes configurar esto desde el panelde la extención forzando MP4.</h4>
+		  <h3 class="text-danger"><b>* Agregado botones de RETROCEDER 10 segundos y ADELANTAR 30 segundos<b></h3>
+		  <h4>Puedes saltar o adelantar segun lo necesites.</h4>	  
+		  <h3 class="text-danger"><b>* Agregada la opción de WebVideoCaster<b></h3>
+		  <h4>Solo cuando se usa esta extención en un dispositivo android con el navegador Kiwi.</h4>
+	          <h3 class="text-danger"><b>* Correcion de bug y errores de la v2.3<b></h3>
+		  <h4>Mejor estabilidad y rendimiento.</h4>
 		  
 			
 			<center><div class="section section-signup">
