--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 		  <img src="assets/img/path1.png" class="path">
 		  <h1 class="title">NUEVOS CAMBIOS</h1><br>
 		  <h3 class="text-danger"><b>* Funciona en modo BETA de Crunchyroll</b></h3>
-		  <h4>Se recomiendo usarlo en una cuenta secundaria para evitar baneo.</h4><br>
+		  <h4>Se recomienda usarlo en una cuenta secundaria para evitar baneo.</h4><br>
 		  <h3 class="text-danger"><b>* Puedes cambiar los SUBTITULOS al idioma que prefieras<b></h3>
 		  <h4>Puedes configurar esto desde el panelde la extención forzando MP4.</h4>
 		  <h3 class="text-danger"><b>* Agregado botones de RETROCEDER 10 segundos y ADELANTAR 30 segundos<b></h3>
