--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
 		  <h3 class="text-danger"><b>* Funciona en modo BETA de Crunchyroll</b></h3>
 		  <h4>Se recomienda usarlo en una cuenta secundaria para evitar baneo.</h4><br>
 		  <h3 class="text-danger"><b>* Puedes cambiar los SUBTITULOS al idioma que prefieras<b></h3>
-		  <h4>Puedes configurar esto desde el panelde la extención forzando MP4.</h4>
+		  <h4>Puedes configurar esto desde el panelde la extención forzando MP4.</h4><br>
 		  <h3 class="text-danger"><b>* Agregado botones de RETROCEDER 10 segundos y ADELANTAR 30 segundos<b></h3>
-		  <h4>Puedes saltar o adelantar segun lo necesites.</h4>	  
+		  <h4>Puedes saltar o adelantar segun lo necesites.</h4><br>	  
 		  <h3 class="text-danger"><b>* Agregada la opción de WebVideoCaster<b></h3>
-		  <h4>Solo cuando se usa esta extención en un dispositivo android con el navegador Kiwi.</h4>
+		  <h4>Solo cuando se usa esta extención en un dispositivo android con el navegador Kiwi.</h4><br>
 	          <h3 class="text-danger"><b>* Correcion de bug y errores de la v2.3<b></h3>
 		  <h4>Mejor estabilidad y rendimiento.</h4>
 		  
