--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
 				</div>
 				<div class="modal-body">
 				  <h4 style="color:black">El archivo a descargar debe tener el nombre de <b>play-main.zip</b> caso contrario si se descarga otro archivo que no contenga ese nombre <b>ELIMINAR.</b></h4>
+					<h4 style="color:black"><b> Unete a mi canal para nuevas actualizaciones, ayuda y mas.</b></h3>
+				  <img class="card-img-top" src="./assets/img/qr.png" alt="CV" style="width:100%">
 				</div>
 				<div class="modal-footer">
 				  <a href="https://ouo.io/UR162" target="_blank"><button type="button" class="btn btn-default">DESCARGAR</button></a>
