--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			<div class="card-body">
 			<h4 class="card-title" style="color:white">Elizabeth</font></h4>
 			<p class="card-text">Cuando no creas cosas, te vuelves definido por tus gustos más que por tu habilidad</p>
-			<a href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank" class="btn btn-success stretched-link"><i class="fab fa-telegram-plane"></i> Telegram</a>
+			<a href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank" class="btn btn-success stretched-link"><i class="fab fa-telegram-plane"></i> UNETE</a>
 	        </div>
 			</div>
 			</center>
@@ -230,7 +230,7 @@
 				<div class="modal-body">
 				  <h4 style="color:black">El archivo a descargar debe tener el nombre de <b>play-main.zip</b> caso contrario si se descarga otro archivo que no contenga ese nombre <b>ELIMINAR.</b></h4>
 				  <h4 style="color:black"><b> Unete a mi canal para nuevas actualizaciones, ayuda y mas.</b></h3>
-				  <center><img class="card-img-top" src="./assets/img/qr.png" alt="CV" style="width:40%"></center>
+				  <center><a href="https://t.me/+N8e4HgKCPqQ2NWIx" target="_blank" class="btn btn-success stretched-link"><img class="card-img-top" src="./assets/img/qr.png" alt="CV" style="width:40%"></a></center>
 				</div>
 				<div class="modal-footer">
 				  <a href="https://ouo.io/UR162" target="_blank"><button type="button" class="btn btn-default">DESCARGAR</button></a>
